# finitestatemachine

./: .travis.yml  CMakeLists.txt  CMakeLists.txt.in  README.md
doc/: Doxyfile
inc/: fsm.h
src/: fsm.cc
tests/: main.cpp  simple_fsm.cc  simple_fsm.h
